<resources>
    <string name="application_title">Speed reading</string>
    <string name="record">Record</string>
    <string name="settings">Settings</string>
    <string name="shulte_table_description">description</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="shulte_table_type_settings">Numbers / Lettets</string>
    <string name="time">Time</string>
    <string name="choose_complexity">Choose complexity</string>
    <string name="author">Author</string>
    <string name="language">Language</string>
    <string name="book_title">Book title</string>
    <string-array name="library_book_settings" translatable="true">
        <item>Remove the book</item>
    </string-array>
    <string-array name="shulte_settings" translatable="false">
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="guess_number_settings" translatable="false">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="vision_field_settings_complexity">
        <item>30 sec</item>
        <item>1 min</item>
        <item>2 min</item>
        <item>3 min</item>
        <item>4 min</item>
        <item>5 min</item>
    </string-array>
    <string name="vision_field_settings_show_time">Show time</string>
    <string-array name="text_size_settings" translatable="false">
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
    </string-array>
    <string name="text_size_default_value" translatable="false">18</string>
    <string name="reading_type">Chose type of reading</string>
    <string-array name="alphabet">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>

        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>

        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>

        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>

        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>

        <item>Z</item>
    </string-array>
    <string-array name="speed_reading_words">
        <item>профессия</item>
        <item>послышаться</item>
        <item>ровный</item>
        <item>старинный</item>
        <item>разведка</item>
        <item>свидетель</item>
        <item>указать</item>
        <item>халат</item>
        <item>сегодняшний</item>
        <item>зимний</item>
        <item>тьма</item>
        <item>повести</item>
        <item>холодно</item>
        <item>сообщение</item>
        <item>гроб</item>
        <item>подхватить</item>
        <item>яма</item>
        <item>позади</item>
        <item>жест</item>
        <item>устраивать</item>
        <item>шоссе</item>
        <item>участвовать</item>
        <item>уважение</item>
        <item>цепь</item>
        <item>подвал</item>
        <item>некогда</item>
        <item>сохранить</item>
        <item>лампа</item>
        <item>закрывать</item>
        <item>доля</item>
        <item>неплохо</item>
        <item>смешной</item>
        <item>понадобиться</item>
        <item>старушка</item>
        <item>покачать</item>
        <item>выясниться</item>
        <item>уничтожить</item>
        <item>отвести</item>
        <item>гриб</item>
        <item>бродить</item>
        <item>погода</item>
        <item>памятник</item>
        <item>жар</item>
        <item>валяться</item>
        <item>кожаный</item>
        <item>механизм</item>
        <item>израиль</item>
        <item>мирный</item>
        <item>потеря</item>
        <item>произносить</item>
        <item>контроль</item>
        <item>дверца</item>
        <item>предупредить</item>
        <item>добиться</item>
        <item>норма</item>
        <item>ложка</item>
        <item>зарплата</item>
        <item>веревка</item>
        <item>метода</item>
        <item>исключение</item>
        <item>убрать</item>
        <item>волнение</item>
        <item>вечно</item>
        <item>смешно</item>
        <item>поддерживать</item>
        <item>продавать</item>
        <item>нежный</item>
        <item>баня</item>
        <item>путем</item>
        <item>повесить</item>
        <item>ужин</item>
        <item>март</item>
        <item>оглядываться</item>
        <item>сигнал</item>
        <item>больной</item>
        <item>сыграть</item>
        <item>библиотека</item>
        <item>услать</item>
        <item>махать</item>
        <item>предполагать</item>
        <item>заметно</item>
        <item>сеть</item>
        <item>коричневый</item>
        <item>тщательно</item>
        <item>нерв</item>
        <item>вертолет</item>
        <item>сладкий</item>
        <item>лекарство</item>
        <item>рассчитывать</item>
    </string-array>
    <string name="eyes_mode">Eyes mode</string>
    <string name="speed_reading">Speed reading</string>
    <string name="prepare">Prepare</string>
    <string name="info">Information</string>
    <string name="file_path">File path</string>
    <string name="speed">Speed</string>
    <string name="file_opening_message">File\'s opening</string>
    <string name="text_size">Text size</string>
    <string name="fast_reading">Fast reading</string>
    <string name="library_is_empty">Your library is empty</string>
    <string name="add_book_message">Book\'s adding to library</string>
    <string name="library">Library</string>
    <string name="page">Page</string>
    <string name="book_remove_message">Do you want to remove the book from your library?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="progress">Progress</string>
    <string name="book_has_been_added">The book has been added</string>
    <string name="open_book">Open the book</string>
    <string name="library_was_changed">The library was changed</string>
    <string name="change_text_size">Change the text size</string>
    <string name="choose_reading_mode">Choose a reading mode</string>
    <string name="exit">Exit</string>
    <string name="exit_message">Do you want to exit?</string>
    <string name="file_reading_error">File reading error</string>
    <string name="select_page">Select the page</string>
    <string name="select_chapter">Select the chapter</string>
    <string name="directory_is_empty">The directory is empty</string>
    <string name="training">Training</string>
    <string name="file_type">File type</string>
    <string name="reading">Reading</string>
    <string name="table_of_contents">Table of contents</string>
    <string name="new_record">New record</string>
    <string name="training_completed">Training completed</string>
    <string name="your_result">Your result</string>
    <string name="retry">Retry</string>
    <string name="complete">Complete</string>
    <string name="colored_items">Colored items</string>
    <string name="permutation">Permutation</string>
    <string name="shulte_settings_input_type">Finger / Eyes</string>
    <string name="stop">Stop</string>
    <string name="shulte_table">Schulte Table</string>
    <string name="shulte_settings_permutation_description">When your answer is correct table will change</string>
    <string name="shulte_settings_colored_description">Numerals have a different colours</string>
    <string name="shulte_settings_eyes_mode_description">Choose training mode</string>
    <string name="shulte_settings_complexity_description">Choose a size of the table</string>
    <string name="shulte_settings_record_lock_description">In this mode new record will not be save</string>
    <string name="restart">Restart</string>
    <string name="help">Help</string>
    <string name="dont_show_it_again">Don\'t show it again</string>
    <string name="close">Close</string>
    <string name="mistake">Mistake</string>
    <string name="vision_field_settings_duration">Duration</string>
    <string name="vision_field_settings_duration_description">The duration of the training</string>
    <string name="vision_field_settings_show_time_description">The duration of element showing</string>
    <string name="shulte_description_part_1_title">Таблицы Шульте</string>
    <string name="shulte_description_part_1">Таблицы со случайно расположенными  числами или буквами, служащие для проверки и развития быстроты нахождения объектов в определённом порядке. Упражнения с таблицами позволяют улучшить периферическое зрительное восприятие, что важно для скорочтения и не только.\n\nКогда вам надо что-то придумать, создать, написать, позанимайтесь с таблицами, и процесс пойдёт на более высоком уровне концентрации, более высоком творческом уровне.\n\nЗанятия с таблицами будут полезны практически для всех видов деятельности человека и в любом возрасте.</string>
    <string name="shulte_description_part_2_title">Режим тренировок</string>
    <string name="shulte_description_part_2">Необходимо выбрать удобное место, расслабиться и сосредоточиться на выполнении задания.\n\nРасстояние от таблицы до глаз должно быть примерно 30—35 см, таким же, как и при чтении книги.\n\nПеред началом работы взгляд фиксируется в  центре таблицы и больше не сдвигается. Вся работа происходит именно в размытом спектре зрения.\n\nНаходить числа нужно в возрастающем порядке от 1 до 25, без пропусков, с максимальной быстротой, желательно не проговаривая числа ни про себя, ни вслух. Очень важно избегать передвижений взгляда из центра и искать числа только периферическим зрением.\n\nВремя и периодичность тренировок нужно выбирать так, чтобы избежать переутомления. Желательно это делать два раза в день по 10 минут.\n\nПо мере развития навыка переходят к таблицам с количеством ячеек 6x6, 7x7.</string>
    <string name="shulte_description_image_1_title">Движения глаз у нетренированного человека</string>
    <string name="shulte_description_image_2_title">Нахождение цифр за 15-20 секунд.</string>
    <string name="shulte_description_image_3_title">Нахождение цифр за 8-10 секунд.</string>
    <string name="shulte_description_part_3_title">Заключение</string>
    <string name="shulte_description_part_3">Не надо стремиться за один подход, именно здесь и сейчас, достигать самого максимального результата. Всё должно проходить постепенно. Позанимались недели три, достигли определённого стабильного результата, сделайте перерыв. Через пару дней продолжайте дальше.\n\nПостепенно, Вы сами увидите эффект. Поймёте насколько улучшилась Ваша способность воспринимать информацию, улучшилась память, мышление. И не забывайте, что это лишь базовое упражнение, своего рода гимнастика, зарядка для головы, поддержание хорошей, рабочей формы.\n\nНаучиться быстро и правильно читать за 3 дня невозможно.\n\nПоэтому настройтесь на долгосрочную работу, и Вы сможете получать от чтения не только пользу, но и удовольствие.</string>
    <string name="vision_field_description_title">Поле зрения</string>
    <string name="vision_field_description">Ваша задача определить наличие несоответствия между буквами по краям таблицы. При несоответствии нажмите кнопку \"Ошибка\".\n\nСфокусируйте свой взгляд в центре экрана и постарайтесь видеть всю таблицу целиком. Главная задача - максимально сосредоточиться на экране и запоминать все несоответствия, фиксируя их кнопкой. Нажимать можно и позже, если не успеваете мгновенно после показа букв, главное - запомнить наличие несоответствия и обязательно нажать кнопку \"Ошибка\".\n\nЭто очень полезное упражнение, которое не только помогает расширить поле зрения, но и приучает Вас максимально концентрироваться в ограниченное время показа, что крайне важно при быстром чтении и не только.</string>
</resources>