<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"

    android:padding="@dimen/default_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/shulte_settings_complexity_view"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/choose_complexity"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/shulte_settings_spinner"
            android:entries="@array/shulte_settings"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:text="@string/shulte_settings_complexity_description"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/shulte_settings_complexity_lock_text_view"
        android:text="@string/shulte_settings_record_lock_description"
        android:textColor="@color/reject_red"
        android:textSize="14sp"

        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/shulte_permutation_switch"
        android:text="@string/permutation"
        android:textSize="16sp"
        android:textColor="@color/black"

        android:paddingTop="@dimen/default_margin"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/shulte_settings_permutation_description"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/shulte_colored_switch"
        android:text="@string/colored_items"
        android:textSize="16sp"
        android:textColor="@color/black"

        android:paddingTop="@dimen/default_margin"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/shulte_settings_colored_description"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/shulte_eye_mode_switch"
        android:text="@string/eyes_mode"
        android:textSize="16sp"
        android:textColor="@color/black"

        android:paddingTop="@dimen/default_margin"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/shulte_settings_eyes_mode_description"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/shulte_settings_eyes_mode_lock_text_view"
        android:text="@string/shulte_settings_record_lock_description"
        android:textColor="@color/reject_red"
        android:textSize="14sp"

        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Button
        android:id="@+id/shulte_start_training_button"

        android:text="@string/start"
        android:textColor="@color/white"

        android:background="@drawable/button_background"

        android:layout_gravity="center_horizontal"

        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"/>

</LinearLayout>