<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/vision_field_description_title"
                android:gravity="center"

                android:textSize="26sp"
                android:textColor="@color/black"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/vision_field_description"

                android:textSize="16sp"
                android:textColor="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:paddingTop="@dimen/default_margin"
        android:paddingBottom="@dimen/default_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/vision_field_description_dont_show_again_check_box"

            android:text="@string/dont_show_it_again"
            android:textColor="@color/grey"
            android:textSize="14sp"

            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/vision_field_description_exit_button"

            android:textColor="@color/white"
            android:text="@string/start"

            android:theme="@style/ButtonStyle"

            android:layout_marginTop="8dp"

            android:layout_gravity="center"
            android:layout_width="125dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>