<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:orientation="vertical"

        android:padding="@dimen/default_margin"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/vision_field_settings_complexity_view"

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/vision_field_settings_duration"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/vision_field_settings_complexity_spinner"
                android:entries="@array/vision_field_settings_complexity"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:text="@string/vision_field_settings_duration_description"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/vision_field_settings_show_time_view"

            android:layout_marginTop="@dimen/default_margin"

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/vision_field_settings_show_time"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/vision_field_settings_show_time_spinner"
                android:entries="@array/vision_field_settings_show_time"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:text="@string/vision_field_settings_show_time_description"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>